fix headings on options page. AG-24187
Squashed commit of the following:

commit 5b3a7c15c46ecded3faef780c086a836a4ac39c1
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 10 13:58:04 2023 +0300

    fix headings on options page

--- a/src/options/components/App/app.pcss
+++ b/src/options/components/App/app.pcss
@@ -21,18 +21,20 @@
         display: inline-flex;
         align-items: center;
         justify-content: space-between;
-        margin: 0 0 8px 16px;
+        margin: 0 0 16px 16px;
         font-size: 32px;
         line-height: 38px;
 
         &--pointer {
             cursor: pointer;
+            margin: 0;
         }
     }
 
     &__subtitle {
-        margin-bottom: 20px;
+        margin-bottom: 16px;
         font-size: 16px;
+        line-height: 24px;
     }
 
     &__link {
