--- a/src/options/components/Exclusions/ChildrenList/ChildrenListItem/children-list-item.pcss
+++ b/src/options/components/Exclusions/ChildrenList/ChildrenListItem/children-list-item.pcss
@@ -41,7 +41,7 @@
 
     &__service-hostname {
         font-size: 16px;
-        line-height: 19px;
+        line-height: 24px;
         font-weight: 400;
         color: var(--gray-base);
         width: 85%;
@@ -49,7 +49,7 @@
         background: none;
         border: none;
         display: flex;
-        padding-left: 4px;
+        padding: 0;
     }
 
     &__arrow {
