--- a/src/options/components/Exclusions/ChildrenList/children-list.pcss
+++ b/src/options/components/Exclusions/ChildrenList/children-list.pcss
@@ -3,7 +3,7 @@
     &__title {
         display: flex;
         align-items: flex-start;
-        margin: 0 0 15px 0;
+        margin: 0 0 16px 16px;
     }
 
     &__add-subdomain {
