--- a/src/options/components/Settings/DnsSettings/dns-settings.pcss
+++ b/src/options/components/Settings/DnsSettings/dns-settings.pcss
@@ -2,14 +2,7 @@
     &__title {
         display: flex;
         align-items: flex-start;
-    }
-
-    &__back {
-        padding: 5px;
-        margin-right: 15px;
-        cursor: pointer;
-        border: none;
-        background: transparent;
+        margin: 0 0 16px 16px;
     }
 
     &__items-group {
