--- a/src/options/components/ui/radio.pcss
+++ b/src/options/components/ui/radio.pcss
@@ -15,7 +15,7 @@
         padding: 0;
         border: none;
         background: transparent;
-        margin: 0 15px 0 0;
+        margin: 0 16px 0 0;
 
         .radio__icon {
             margin: 0;
