--- a/src/options/styles/button.pcss
+++ b/src/options/styles/button.pcss
@@ -199,8 +199,7 @@ button,
     cursor: pointer;
     border: 0;
     background: transparent;
-    transform: rotate(180deg);
-    padding: 12px 8px 5px 16px;
+    padding: 7px 16px 7px 0;
 
     &:hover {
         filter: brightness(.7);
